--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -5,8 +6,9 @@ body {
     box-sizing: border-box;
 }
 
-header {
-    background-color: #333;
+header .gray {
+    background: #9e9e9e;
+    /* background-color: #333; */
     color: #fff;
     padding: 1rem;
 }
@@ -33,3 +35,13 @@ main {
 section {
     margin-bottom: 2rem;
 }
+
+div.highlightTextIn a
+{
+    color: rgba(0, 0, 0, 0.4); 
+}
+
+div.highlightTextIn a:before
+{
+    transform: scale(1.2);
+} 
