--- a/style.css
+++ b/style.css
@@ -355,3 +355,21 @@ footer p {
         padding: 20px;
     }
 }
+
+::-webkit-scrollbar {
+    width: 12px;
+    background-color: #f0f0f0;
+  }
+  
+ 
+  ::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px; 
+    border: 3px solid #f0f0f0;
+  }
+  
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555; 
+  }
+  
