--- a/style.css
+++ b/style.css
@@ -189,6 +189,10 @@ main {
 }
 
 .project-card {
+    display: flex;
+    flex-direction: column; /* Stack children vertically */
+    justify-content: space-between; /* Space between items */
+    height: 100%; /* Ensure the card uses the full height available */
     background: #fefefe;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -201,7 +205,7 @@ main {
 
 .project-card h3 {
     font-size: 1.5rem;
-    margin-bottom: 10px;
+    margin-bottom: auto; 
 }
 
 .project-card p {
@@ -296,8 +300,13 @@ form button:hover {
 }
 
 .project-btn {
+    margin-top: auto; /* Pushes the button to the bottom */
     background-color: #717171;
     color: white !important;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .project-btn:hover {
